...
  String get prayerTimes => 'Prayer Times';

  @override
  String get reminders => 'Reminders';

  @override
  String get events => 'Events';

  @override
  String get settings => 'Settings';

  @override
  String get today => 'Today';
...
